# DDNM-for-inpainting

hq_demo/: .gitignore  BATCH_SLIDING_INPAINTING.md  BSDS500_SLIDING_GUIDE.md  REFACTORING.md  batch_boundary_ring_inpainting.py  batch_nine_patch_inpainting.py  batch_process_bsds500.py  batch_sliding_inpainting.py  check_mask_values.py  coordinate_transform.py  flake.nix  generate_10px_mask.py  nine_patch_inpainting.py  nine_patch_inpainting_fixed.py  pyproject.toml  quick_test_batch.py  test_boundary_ring_inpainting.py  test_center_hole_inpainting.py  test_enhanced_nine_patch.py  test_gen.py  test_generator_behavior.py  test_nine_patch_minimal.py  test_single_inpainting.py  test_sliding_inpainting_512.py  test_t100_inpainting.py  test_uncond_inpainting.py  trace_ddnm_loop.py  verify_mask_in_processing.py
hq_demo/confs/: inet256_inpainting.yml  inet512.yml  inet512_inpainting.yml  inet512_sliding_inpainting.yml  inpainting_512_nine_patch.yml  inpainting_512_nine_patch_t100.yml  inpainting_512_nine_patch_t100_uncond.yml  test_inpainting_256.yml
hq_demo/guided_diffusion/: gaussian_diffusion.py.backup
hq_demo/utils/: README.md  __init__.py  batch_utils.py  image_processing.py  mask_generator.py  model_loader.py  result_manager.py
